objects/Decisioning_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callout_Class_Name__c</fullName>
        <label>Callout Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Field_Name__c</fullName>
        <label>Decision Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parser_Class_Name__c</fullName>
        <label>Parser Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Class_Name__c</fullName>
        <label>Response Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>PRE-CONTRACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POST-CONTRACT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Decisioning Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Callout_Class_Name__c</columns>
        <columns>Decision_Field_Name__c</columns>
        <columns>Order__c</columns>
        <columns>Parser_Class_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Decisioning Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decisioning Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>